tests/fail/10_invalid_expr_stmt.lang
функция main() : целое {
    1 + 1;
    вернуть 0;
}
